@@ -339,6 +339,7 @@ $magicWords = array(
 	'tag'                    => array( 0,    'tag'                    ),
 	'hiddencat'              => array( 1,    '__HIDDENCAT__'          ),
 	'pagesincategory'        => array( 1,    'PAGESINCATEGORY', 'PAGESINCAT' ),
+	'pagesize'               => array( 1,    'PAGESIZE'               ),
 );
 
 /**
